add tailwind and config

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+/* This injects Tailwind's base styles and any base styles registered by plugins. */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
